kube/hocs-outbound-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hocs-outbound-proxy
  labels:
    name: hocs-outbound-proxy
    service: hocs-outbound-proxy
spec:
  ports:
    - name: http
      port: 31290
      targetPort: 3129
  selector:
    name: hocs-outbound-proxy
