kube/hocs-frontend-networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hocs-frontend-policy
spec:
  podSelector:
    matchLabels:
      role: hocs-frontend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-external
    ports:
    - port: 10443
      protocol: TCP
  egress:
  - to:
    - namespaceSelector: {}
